2011-04-15  Thomas Adam <thomas@fvwm.org>
	* NEWS:
	* configure.ac:
	Updated for the FVWM 2.6.0 stable release.

2011-04-10    <despen@verizon.net>
	* fvwm/fvwm.c (SetRCDefaults): Add fvwm-menu-desktop to built in menu.

2011-04-10  Thomas Adam  <thomas@fvwm.org>
	* acinclude.m4:
	* configure.ac:
	More --as-needed ld fixes for linking against exernal libraries.

2011-04-05  Thomas Adam  <thomas@fvwm.org>
	* fvwm/update.c (apply_window_updates):
	Don't clear all States on WindowStyle.

2011-04-02  Thomas Adam  <thomas@fvwm.org>
	*fvwm/ewmh_conf.c (CMD_EwmhBaseStruts):
	Use EWMH_UpdateWorkArea() and not separate function calls

	Don't assume the work of EWMH_UpdateWorkArea() will only ever call two
	function calls by itself in the future; hence, centralise the call to
	doing that to the correct containing function.

2011-02-05  Thomas Adam  <thomas@fvwm.org>
	* acinclude.m4:
	Fix DSO linker error (ld) with missing "-lfontconfig" for fontconfig
	
	Stricter DSO checks with newer Libc versions requires the linker find
	the symbols elsewhere.  The only one that's missing is "-lfontconfig" as
	we already supply -lX11 -lXent elsewhere.

2011-03-02  Thomas Adam  <thomas@fvwm.org>
	* fvwm/events.c (HandleFocusIn):
	Fix NeverFocus windows when handling FocusIn events.

	Certain button presses on client windows can trigger a FocusIn event on
	the parent (such as opening a menu on a GTK application).  Disallow the
	click to trigger the window receiving focus, as well as redrawing the
	border to reflect the window has focus.

2011-02-14  Thomas Adam  <thomas@fvwm.org>
	* libs/PictureImageLoader.c (PImageLoadPng):
	Use png_get_color_type() as the data type we were previously using is
	now no longer public (Finfo_ptr->color_type).  This is in libpng 1.5 --
	hopefully no need for an #ifdef.

2010-12-19  Thomas Adam  <thomas@fvwm.org>
	* fvwm/builtins.c (CMD_CursorMove):
	Honour EdgeScroll settings to not flip pages when EdgeScroll is
	disabled.

2010-12-04    <despen@verizon.net>
